<resources>
    <string name="app_name">car2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_order_request">OrderRequestActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_text_m">
        this is test text bla asdsa \n
        asdassd asd sad asdfs sadasd
    </string>
    <string name="test_text_s">Hello</string>
    <string name="test_text_l">sfsgfdg dgdsfg fgdgfh dffdgdg gffgh fgj hfhfghfhfg fhgfh  fghfh fghfth  hdhdh  shrth fhdrthsrth  hdtyjyh hdh6hrt hdhh hh5a f rtdhe56  srthe56h w</string>
    <string name="test_text_s_u"><u>Hello World</u></string>
    <string name="show_offers"><a>Show offers</a></string>
    <string name="is_empty">%1$s is empty.</string>
    <string name="phone_number">phone number</string>
    <string name="name">name</string>
    <string name="dob">date of birth</string>
    <string name="citizenship">Citizenship</string>
    <string name="city">City</string>
    <string name="register">Sigin up</string>
    <string name="accept">Accept</string>
    <string name="avatar">Avatar</string>
    <string name="colon">:</string>
    <string name="icon">icon</string>
    <string name="experience">Experience</string>
</resources>
