<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/v_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/TextColor"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/test_text_s_u" />

        <TextView
            android:id="@+id/v_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded"
            android:paddingBottom="1dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="1dp"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/v_name"
            app:layout_constraintStart_toEndOf="@+id/v_name"
            app:layout_constraintTop_toTopOf="@+id/v_name"
            tools:text="9.5" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_name">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <ImageView
                    android:id="@+id/imageView24"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/car" />

                <TextView
                    android:id="@+id/textView3dsa4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rounded2"
                    android:paddingBottom="1dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="1dp"
                    android:text="@string/test_text_s"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView24"
                    app:layout_constraintStart_toEndOf="@+id/imageView24" />

                <TextView
                    android:id="@+id/v_transport_model"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/test_text_m"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView24" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ava" />

                <TextView
                    android:id="@+id/textView3dsa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rounded2"
                    android:paddingBottom="1dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="1dp"
                    android:text="@string/test_text_s"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toEndOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/v_shipping_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/test_text_m"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/modey" />

                <TextView
                    android:id="@+id/textView3dsa3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rounded2"
                    android:paddingBottom="1dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="1dp"
                    android:text="@string/test_text_s"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView23"
                    app:layout_constraintStart_toEndOf="@+id/imageView23" />

                <TextView
                    android:id="@+id/v_payment_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/test_text_m"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView23" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <View
            android:id="@+id/_view"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/v_delete"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/v_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/v_price"
            app:layout_constraintEnd_toStartOf="@+id/v_call"
            app:layout_constraintTop_toBottomOf="@+id/v_date"
            app:srcCompat="@drawable/reject" />

        <ImageView
            android:id="@+id/v_call"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/v_delete"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/v_delete"
            app:srcCompat="@drawable/call" />

        <TextView
            android:id="@+id/v_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="23.01.2018"
            android:textSize="11sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/v_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="8000 tg."
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/_view" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>